; ModuleID = '/home/carl/AnghaBench/redis/src/modules/extr_hellodict.c_cmd_SET.c'
source_filename = "/home/carl/AnghaBench/redis/src/modules/extr_hellodict.c_cmd_SET.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@Keyspace = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [3 x i8] c"OK\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @cmd_SET(i32* %0, i32** %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32**, align 8
  %7 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store i32** %1, i32*** %6, align 8
  store i32 %2, i32* %7, align 4
  %8 = load i32, i32* %7, align 4
  %9 = icmp ne i32 %8, 3
  br i1 %9, label %10, label %13

10:                                               ; preds = %3
  %11 = load i32*, i32** %5, align 8
  %12 = call i32 @RedisModule_WrongArity(i32* %11)
  store i32 %12, i32* %4, align 4
  br label %28

13:                                               ; preds = %3
  %14 = load i32, i32* @Keyspace, align 4
  %15 = load i32**, i32*** %6, align 8
  %16 = getelementptr inbounds i32*, i32** %15, i64 1
  %17 = load i32*, i32** %16, align 8
  %18 = load i32**, i32*** %6, align 8
  %19 = getelementptr inbounds i32*, i32** %18, i64 2
  %20 = load i32*, i32** %19, align 8
  %21 = call i32 @RedisModule_DictSet(i32 %14, i32* %17, i32* %20)
  %22 = load i32**, i32*** %6, align 8
  %23 = getelementptr inbounds i32*, i32** %22, i64 2
  %24 = load i32*, i32** %23, align 8
  %25 = call i32 @RedisModule_RetainString(i32* null, i32* %24)
  %26 = load i32*, i32** %5, align 8
  %27 = call i32 @RedisModule_ReplyWithSimpleString(i32* %26, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0))
  store i32 %27, i32* %4, align 4
  br label %28

28:                                               ; preds = %13, %10
  %29 = load i32, i32* %4, align 4
  ret i32 %29
}

declare dso_local i32 @RedisModule_WrongArity(i32*) #1

declare dso_local i32 @RedisModule_DictSet(i32, i32*, i32*) #1

declare dso_local i32 @RedisModule_RetainString(i32*, i32*) #1

declare dso_local i32 @RedisModule_ReplyWithSimpleString(i32*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
